--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="col-2">
     <div class="msg"><span>Try it free 7 days </span>then $20/mo. thereafter</div>
   <div class="card">
-    <input type="text" value="Jonathan " autofocus required>
+    <input type="text" value="Jonathan" placeholder="First Name" autofocus required>
     <input type="text" required placeholder="Last Name">
     <input type="mail" required placeholder="Email Address">
     <input type="password" required placeholder="Password">
